--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+// https://mvnrepository.com/artifact/pl.allegro.tech.boot/handlebars-spring-boot-starter
+	implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.4'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
