added postgres properties in application properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# PostgreSQL database connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/wildlifedb
+spring.datasource.username=lolo
+spring.datasource.password=lolo
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
