changed db to wildlife_tracker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # PostgreSQL database connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/wildlifedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/wildlife_tracker
 spring.datasource.username=lolo
 spring.datasource.password=lolo
 spring.datasource.driver-class-name=org.postgresql.Driver
